# TypeAhead

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/src/: Config.h  Engine.cpp  Engine.h  Types.h  Util.h  main.cpp
backend/src/batch/: BatchWriter.cpp  BatchWriter.h
backend/src/cache/: RedisCache.cpp  RedisCache.h
backend/src/core/: ConsistentHashRing.cpp  ConsistentHashRing.h  Trie.cpp  Trie.h
backend/src/metrics/: Metrics.h
backend/src/ranking/: Scorer.h
backend/src/store/: PostgresStore.cpp  PostgresStore.h
backend/tools/: load_dataset.cpp
docs/: architecture.md  performance.md
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
scripts/: bench.py  download_dataset.sh  start_services.sh  stop_services.sh
sql/: schema.sql
